# keynote-slides-freezer

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  DEPLOYMENT.md  DEVELOPMENT.md  HISTORY.rst  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  version.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: binary-release.yml  ci.yml  release.yml
keynote_slides_freezer/: __init__.py  cli.py  keynote_slides_freezer.py
scripts/: build-binary.sh  build.sh  dev-setup.sh  release.sh  test.sh
tests/: __init__.py  test_imports.py  test_version.py
